gccida/c0/verbatim
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verbatim/src/diagnostic.c:1821:60: error: expected expression
output_do_verbatim( diagnostic_buffer, msgid, ( va_list_0 *)ap); 
                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verbatim/src/diagnostic.c:1821:49: error: use of undeclared identifier 'va_list_0'
output_do_verbatim( diagnostic_buffer, msgid, ( va_list_0 *)ap); 
                                                ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verbatim/src/obj/diagnostic.o] Error 1
